--- a/web/src/components/careers/jobDetails.css
+++ b/web/src/components/careers/jobDetails.css
@@ -1,5 +1,5 @@
 .job-detail-container{
-    max-width: 1200px;
+    width: 68%;
     margin: 0 auto;
     padding: 20px;
     font-family: Arial, sans-serif;
