--- a/web/src/components/about/howitworksrework.css
+++ b/web/src/components/about/howitworksrework.css
@@ -1,5 +1,6 @@
 .howitworks__main {
-  width: 100%;
+  margin: 0 auto;
+  width: 80%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,47 +8,47 @@
 }
 
 .howitworks__title {
-  font-size: 2.25rem;
-  margin: 0rem;
+  font-size: 2rem;
+  font-weight: 450;
+  margin-top: 3.6rem;
 }
 
 .howitworks__subtitle {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
+  font-weight: 400;
   margin: 0rem;
 }
 
 .howitworks__titles-container {
-  width: 100%;
-  gap: 1.375rem;
+  max-width: 100%;
+  margin: 0 auto;
   height: 10rem;
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
-  margin-top: 3rem;
 }
 
 .howitworks__section-title-container {
-  width: 84.12rem;
+  width: 100%;
+  max-width: 84.12rem;
   margin-top: 1.4rem;
   display: flex;
-  margin-bottom: 0.6rem;
 }
 
 .howitworks__section-title {
-  font-size: 2.25rem;
+  font-size: 1.8rem;
   font-weight: 500;
-  margin: 0rem;
+  margin: 0rem 2rem;
 }
 
 .howitworks__info-block {
-  width: 84.12rem;
+  width: 95%;
+  max-width: 80.12rem;
   border-radius: 0.4rem;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 1rem;
+  padding: 1rem;
 }
 
 .howitworks__info-block--guests {
@@ -60,84 +61,98 @@
 }
 
 .howitworks__info-item {
-  width: 23.8rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  height: 14rem;
+  background-color: inherit;
+  margin: 0.3rem auto;
   display: flex;
   flex-direction: column;
-}
-
-.borderleft {
-  border-left: 0.2rem solid white;
-  padding-left: 2rem;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 1rem;
+  text-align: left;
 }
 
 .borderright {
   border-right: 0.2rem solid white;
+  padding-right: 1rem;
+}
+
+.borderleft {
+  border-left: 0.2rem solid white;
+  padding-left: 1rem;
 }
 
 .howitworks__info-header {
-  height: 3rem;
   width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  text-align: center;
-  gap: 2rem;
-  margin-bottom: 2.5rem;
+  align-items: flex-start;
+  justify-content: space-between; 
+  gap: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .howitworks__info-title {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   color: white;
-  font-weight: 500;
+  font-weight: 450;
+  text-align: left; 
+  margin: 0; 
 }
 
 .howitworks__info-text {
   font-size: 1rem;
   color: white;
-  max-width: 19rem;
+  width: 100%;
+  margin: auto; 
 }
 
-@media (max-width: 1364px) {
-  .howitworks__main {
-    padding-left: 1rem;
+@media (max-width: 1264px) {
+  .howitworks__info-item {
+    height: auto;
+    padding: 1rem;
+    margin: 1rem auto;
+    width: 90%;
+    align-items: flex-start; 
   }
-  .howitworks__info-block {
+
+  .howitworks__info-header {
+    justify-content: space-between; 
+    align-items: flex-end; 
+    height: auto;
     width: 100%;
+    margin-bottom: 0.5rem; 
   }
+
+  .howitworks__info-title {
+    text-align: left;
+    margin: 0 ;
+  }
+
+  .howitworks__info-text {
+    text-align: left;
+    width: 85%;
+    margin: 0;
+  }
+
+  .howitworks__info-block {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+
+  .borderright {
+    border-right: none;
+    border-bottom: 0.2rem solid white;
+  }
+
+  .borderleft {
+    border-left: none;
+    border-top: 0.2rem solid white;
+  }
+
   .howitworks__section-title-container {
     width: 100%;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start; 
+    justify-content: center; 
     margin-bottom: 1.1rem;
-  }
-}
-
-@media (max-width: 1238px) {
-  .howitworks__main {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-  .borderleft {
-    border-left: 0.0rem solid white;
-    border-top: 0.2rem solid white;
-    padding-left: 2rem;
-  }
-  .borderright {
-    border-right: 0.2rem solid white;
-  }
-}
-
-@media (max-width: 796px) {
-  .borderright {
-    border-right: 0.0rem solid white;
-    border-bottom: 0.2rem solid white;
-    padding-left: 0rem;
-    padding-bottom: 2rem;
-  }
-  .borderleft {
-    padding-top: 2rem;
+    padding-left: 1rem; 
   }
 }
