--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -66,22 +66,24 @@
 }
 
 .personalMenuDropdown .personalMenuDropdownContent {
-    padding: 15px;
+    padding: 20px 25px 20px 25px;
     position: absolute;
-    background-color: #EBFAED;
+    /* background-color: red; */
+    background-color: white;
     width: auto; /* Adjust width as needed */
     min-width: 240px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    top: calc(100% + 25px); /* Position below the personalMenu button */
-    right: 10px; /* Align with the left edge of the button */
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
+    top: calc(100% + 5px); /* Position below the personalMenu button */
+    right: 0; /* Align with the left edge of the button */
+    /* border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px; */
+    border-radius: 10px;
 }
 
 .personalMenuDropdownContent button {
     padding: 8px 15px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
     border-radius: 15px;
     justify-content: center;
     align-items: center;
@@ -106,7 +108,7 @@
 
 .dropdownRegisterButton, .dropdownLogoutButton {
     margin-top: 10px;
-    background-color: #49146A;
+    background-color: var(--secondary-color);
     border: none;
     box-shadow: none;
 }
