A lot of styling changes and global color usage.

--- a/web/src/components/about/howitworksrework.css
+++ b/web/src/components/about/howitworksrework.css
@@ -51,7 +51,7 @@
 }
 
 .howitworks__info-block--guests {
-  background: #0D9813;
+  background: var(--primary-color);
 }
 
 .howitworks__info-block--hosts {
