--- a/web/src/components/booking/listing.css
+++ b/web/src/components/booking/listing.css
@@ -193,8 +193,8 @@ main{
 }
 
 /* Stijl voor de knop */
-.button {
-  background-color: #4CAF50;
+.backButton {
+  background-color: var(--primary-color);
   border: none;
   color: white;
   padding: 12px 24px;
