--- a/web/src/components/about/about.css
+++ b/web/src/components/about/about.css
@@ -37,7 +37,7 @@
     flex-direction: column;
     justify-content: space-between;
     width: 49%;
-    background-color: #0D9813;
+    background-color: var(--primary-color);
     border-radius: 20px;
     padding: 20px;
     margin-top: 20px;
