--- a/web/src/components/careers/careers.css
+++ b/web/src/components/careers/careers.css
@@ -21,7 +21,7 @@
 }
 
 .filter-container button.active, .filter-container button:hover {
-    background-color: #007bff;
+    background-color: var(--primary-color);
     color: white;
 }
 
@@ -79,12 +79,12 @@
 }
 
 .pagination button.active {
-    background-color: #007bff;
+    background-color: var(--primary-color);
     color: white;
 }
 
 .apply-button {
-    background-color: #0D9813;
+    background-color: var(--primary-color);
     color: white;
     border: none;
     padding: 10px 20px;
@@ -98,7 +98,7 @@
 }
 
 .apply-button:hover {
-    background-color: #45a049;
+    opacity: 90%;
 }
 
 .job-box:hover .job-description {
