--- a/web/src/components/chatwidget/ChatWidget.css
+++ b/web/src/components/chatwidget/ChatWidget.css
@@ -5,11 +5,10 @@
   z-index: 1000;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .chatwidget-toggle {
-  background-color: #28a745; /* Green color */
+  background-color: var(--primary-color);
   color: white;
   border: none;
   border-radius: 50%;
@@ -45,7 +44,7 @@
 .chatwidget-resize-handle {
   width: 20px;
   height: 20px;
-  background-color: #28a745; /* Green color */
+  background-color: var(--primary-color);
   cursor: nwse-resize;
 }
 
@@ -103,7 +102,7 @@
 }
 
 .chatwidget-message.user .chatwidget-message-content {
-  background-color: #28a745; /* Green color */
+  background-color: var(--primary-color);
   color: white;
   border-bottom-right-radius: 0;
 }
@@ -172,14 +171,14 @@
   padding: 10px 20px;
   border: none;
   border-radius: 20px;
-  background-color: #28a745; /* Green color */
+  background-color: var(--primary-color);
   color: white;
   cursor: pointer;
   outline: none;
 }
 
 .chatwidget-input button:disabled {
-  background-color: #28a745; /* Green color */
+  background-color: var(--primary-color);
   opacity: 0.6;
   cursor: not-allowed;
 }
@@ -189,7 +188,7 @@
 }
 
 .chatwidget-input button:hover {
-  background-color: #218838; /* Darker green */
+  opacity: 90%;
 }
 
 .chatwidget-accommodation-tiles {
