--- a/web/src/components/landingpage/Faq.css
+++ b/web/src/components/landingpage/Faq.css
@@ -27,7 +27,7 @@
   flex-direction: row ;
   color: white;
   border-radius: 8px;
-  background-color: #0D9813;
+  background-color: var(--primary-color);
   border: 2px solid var(--primary-color);
   padding: 10px 20px;
   margin: 10px 0px;
@@ -50,13 +50,13 @@
 }
 
 .faqButton:hover {
-  background-color: #367a4a;
+  opacity: 90%;
 }
 
 .category{
   color: white;
   border-radius: 8px;
-  background-color: #0D9813;
+  background-color: var(--primary-color);
   border: 2px solid var(--primary-color);
   padding: 10px 20px;
   margin: 30px 20px;
