--- a/web/src/components/chat/chat.css
+++ b/web/src/components/chat/chat.css
@@ -7,6 +7,20 @@
     align-items: center;
 }
 
+.chat__body {
+    display: flex;
+    flex-direction: row;
+    gap: 10%;
+    .contact-list {
+        flex-direction: column;
+        width: 40vw;
+        .switcher {
+            display: flex;
+            justify-content: start;
+            gap: 5%;
+        }
+    }
+}
 .chat__container{
     width: 100%;
     height: 100%;
