--- a/web/src/components/hostdashboard/HostReports.css
+++ b/web/src/components/hostdashboard/HostReports.css
@@ -11,12 +11,12 @@ h2 {
 
 .dashboard {
     display: flex !important;
-    justify-content: flex-start !important; /* Ensures the tabs stay to the left */
+    justify-content: flex-start !important;
     width: 100% !important;
 }
 
 .tabsContainer {
-    flex: 0 0 auto !important; /* Prevents the tabs from stretching */
+    flex: 0 0 auto !important;
 }
 
 .contentContainer {
@@ -25,7 +25,7 @@ h2 {
     flex-direction: column !important;
     align-items: center !important;
     max-width: 800px !important;
-    margin: 0 auto !important; /* Centers the contentContainer */
+    margin: 0 auto !important;
 }
 
 .reportsSection {
