--- a/web/src/components/landingpage/Faq.css
+++ b/web/src/components/landingpage/Faq.css
@@ -32,8 +32,8 @@
   padding: 10px 20px;
   margin: 10px 0px;
   cursor: pointer;
-  max-width: 200px; /* Set the maximum width for the buttons */
-  flex: 1; /* Ensure buttons grow to take available space */
+  max-width: 200px;
+  flex: 1;
   text-align: center; 
   font-weight: 500;
   font-size: 15px;
