--- a/web/src/components/chat/ChatPage.module.css
+++ b/web/src/components/chat/ChatPage.module.css
@@ -5,7 +5,7 @@
     .contactList {
         display: flex;
         flex-direction: column;
-        width: 20vw;
+        width: 15vw;
         .switcher {
             display: flex;
             flex-direction: column;
@@ -80,10 +80,10 @@
 .roundButton {
     border-radius: 50%;
     cursor: pointer;
-    font-size: 16px;
-    font-weight: 700;
+    font-size: 1em;
+    font-weight: 600;
     height: 1.5em;
-    line-height: 1.25em;
+    line-height: 1em;
     outline: none;
     text-align: center;
     transition: background-color .3s;
