--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -3,6 +3,7 @@
     box-shadow: 0 2px 6px 0 #0d1a2626;
     padding: 20px 50px;
     text-align: center;
+    background-color: white;
 }
 
 .header-nav {
@@ -117,7 +118,7 @@
     opacity: 90%;
 }
 
-.headerButtons button{
+.headerButtons button {
     width: 100%;
     height: 100%;
     padding: 5px 15px;
@@ -161,7 +162,7 @@
         margin-top: 20px;
     }
 
-    .headerButtons, .personalMenu, .Search-bar{
+    .headerButtons, .personalMenu, .Search-bar {
         width: 100%;
         margin-top: 10px;
         margin-right: 0;
@@ -169,6 +170,17 @@
         float: none;
     }
 
+    .App, .app-header {
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+    }
+
+    .Search-bar.active{
+        height: 61vh;
+        margin-top: 29%;
+        overflow-y: hidden;
+    }
 }
 
 /* Footer styles */
@@ -221,9 +233,10 @@
     justify-content: center;
     padding: 15px;
 }
+
 .footer-icons img {
-    width: 2.3rem; 
-    height: auto; 
+    width: 2.3rem;
+    height: auto;
     margin-left: 1.2rem;
     margin-bottom: 0.6rem;
     border-radius: 25%;
