--- a/web/src/components/booking/listing.css
+++ b/web/src/components/booking/listing.css
@@ -35,7 +35,7 @@
       height: 10%;
       border: none;
       border-radius: 2rem;
-      background: red;
+      background: var(--primary-color);
       color: white;
       cursor: pointer;
     }
@@ -55,7 +55,7 @@
 }
 
 .reserve-button {
-  background-color: #0D9813;
+  background-color: var(--primary-color);
   color: white;
   padding: 10px;
   border: none;
@@ -87,7 +87,7 @@
 }
 
 .price {
-  color: #0D9813;
+  color: var(--primary-color);
 }
 
 .extraDetails {
