--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -3,7 +3,7 @@
     box-shadow: 0 2px 6px 0 #0d1a2626;
     padding: 20px 50px;
     text-align: center;
-    background-color: white;
+    /*background-color: white;*/
 }
 
 .header-nav {
@@ -150,7 +150,6 @@
 }
 
 @media screen and (max-width: 650px) {
-
     .header-nav, .headerRight {
         flex-direction: row;
         justify-content: center;
@@ -158,7 +157,7 @@
     }
 
     .headerRight {
-        width: 90%;
+        width: 69%;
         margin-top: 20px;
     }
 
@@ -170,16 +169,56 @@
         float: none;
     }
 
-    .App, .app-header {
+    .app-header {
+        padding: 0;
+    }
+
+    .App, .header-top {
         position: sticky;
         top: 0;
         z-index: 1000;
+        background: white;
+        width: 100%;
+        padding-top: 10px;
+    }
+
+    .header-top {
+        box-shadow: 0 2px 0 0 #0d1a2626;
+    }
+
+    .header-top.active {
+        height: 90vh;
+    }
+
+    .header-top.active.no-scroll {
+        overflow: hidden;
+    }
+
+    .header-bottom {
+        display: none;
+    }
+
+    .headerRight {
+        display: flex;
+        justify-content: center;
+        justify-items: center;
+        align-content: center;
+        margin: 0 70px 0 auto;
+        height: auto;
+    }
+
+    .bar-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 10px 20px;
     }
 
     .Search-bar.active{
-        height: 61vh;
-        margin-top: 29%;
-        overflow-y: hidden;
+        height: 37vh;
+        align-content: center;
+        margin: 4vh auto 0 3.5vw;
     }
 }
 
