--- a/web/src/components/chatwidget/ChatWidget.css
+++ b/web/src/components/chatwidget/ChatWidget.css
@@ -229,8 +229,8 @@
 
 @media (max-width: 768px) {
   .chatwidget-widget {
-    width: 80%;
-    bottom: 10px;
+    /*width: 80%;*/
+    bottom: 12px;
     right: 10px;
   }
 }
