--- a/web/src/components/about/helpdesk.css
+++ b/web/src/components/about/helpdesk.css
@@ -1,6 +1,6 @@
 .helpContainer {
-  width: 100%;
-  padding: 50px;
+  width: 93%;
+  margin: 50px auto 0 auto;
 }
 
 .helpSearchWrapper {
@@ -11,8 +11,8 @@
 
 .helpSearchInput {
   width: 100%;
-  padding: 10px;
-  border: 2px solid #ccc;
+  padding: 15px 10px;
+  border: 2px solid var(--primary-color);
   border-radius: 5px;
 }
 
