--- a/web/src/components/landingpage/Faq.css
+++ b/web/src/components/landingpage/Faq.css
@@ -13,7 +13,7 @@
   font-size: clamp(10px, 4vw, 25px);
   font-weight: bolder;
 }
-
+ 
 .faq-button-container {
   display: flex;
   justify-content: left; 
@@ -30,13 +30,19 @@
   background-color: var(--primary-color);
   border: 2px solid var(--primary-color);
   padding: 10px 20px;
-  margin: 10px 0px;
+  margin: 10px 0 0 0;
   cursor: pointer;
   max-width: 200px;
   flex: 1;
   text-align: center; 
   font-weight: 500;
   font-size: 15px;
+}
+
+.foundResults {
+  font-size: 24px;
+  color: black;
+  margin: 0;
 }
 
 .faq-box {
