--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -645,3 +645,31 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .mobile-search-button {
+    display: block;
+    width: 75vw;
+    padding: 0.8rem;
+    background-color: #ffffff;
+    border: 1px solid #e2e2e4;
+    border-radius: 0.8rem;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    font-size: 1rem;
+    color: #000;
+    outline: none;
+    text-align: left;
+    font-weight: 400;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: transform 0.3s ease-in-out;
+    margin-bottom: 0.5rem ;
+    text-overflow: ellipsis;
+  }
+
+  @media screen and (min-width: 768px) {
+    .mobile-search-button {
+      width: 45vw;
+    }
+  }
+}
+
