--- a/web/src/components/chat/ChatPage.module.css
+++ b/web/src/components/chat/ChatPage.module.css
@@ -1,7 +1,7 @@
 .chat__body {
     display: flex;
     flex-direction: row;
-    gap: 10%;
+    gap: 5%;
     .contactList {
         display: flex;
         flex-direction: column;
@@ -32,6 +32,7 @@
                 padding: 0.5rem;
                 background-color: var(--primary-color);
                 border-radius: 1rem;
+                color: white;
                 div {
                     color: white;
                 }
@@ -119,20 +120,32 @@
     background-color: white;
     border: 1px solid var(--primary-color);
 }
-.chatNotification {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    position: absolute;
-    background: #0D9813;
-    right: -13%;
-    top: 10px;
+
+.accoDisplay{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.1rem;
-    color: white;
-    font-family: "Kanit";
-    src: local("KanitRegular"),
-    url("../../fonts/kanit/Kanit-Regular.ttf") format("truetype");
+    flex-direction: column;
+    align-items: flex-start;
+    border: 1.5px solid #eee;
+    height: 85%;
+    border-bottom-right-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
+    width: 40%;
+    h4 {
+        align-self: center;
+    }
+    .textDisplay {
+        display: flex;
+        flex-direction: column;
+        margin: 5%;
+        h3 {
+            margin: 0;
+        }
+    }
+}
+
+.chatContainer {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
 }
